...
                      border: Border(
                          bottom: BorderSide(
                        color: Color(0xFF2a9d8f),
                      )),
                    ),
                    child: ListTile(
                      key: Key('gametab'),
                      contentPadding: EdgeInsets.symmetric(
                          vertical: 20.0, horizontal: 35.0),
                      dense: true,
                      onTap: () {
                        Navigator.of(context).pushReplacement(MaterialPageRoute(
                            builder: (context) => GameChatPage()));
...
